Use pseudo element for background

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="main">
+    <div class="content">
       <div class="left-side">
         <div class="inner">
           <h1>Syzygy endgame tablebases</h1>
@@ -58,6 +59,5 @@
         </div>
       </div>
     </div>
-    <div class="background-left" aria-hidden="true"></div>
   </body>
 </html>
