Actually put footer in footer

--- a/index.html
+++ b/index.html
@@ -25,10 +25,6 @@
               </span>
             </div>
           </form>
-
-          <footer>
-            <p>Powered by Ronald de Man's <a href="https://github.com/syzygy1/tb">Syzygy endgame tablebases</a>, <a href="https://github.com/niklasf/python-chess">python-chess</a> for probing and <a href="http://chessboardjs.com">chessboard.js</a> and <a href="https://github.com/jhlywa/chess.js">chess.js</a> for the client.</p>
-          </footer>
         </div>
       </div>
       <div class="right-side">
@@ -54,6 +50,12 @@
           </div>
         </div>
       </div>
+
+      <footer>
+        <div class="inner">
+          <p>Powered by Ronald de Man's <a href="https://github.com/syzygy1/tb">Syzygy endgame tablebases</a>, <a href="https://github.com/niklasf/python-chess">python-chess</a> for probing and <a href="http://chessboardjs.com">chessboard.js</a> and <a href="https://github.com/jhlywa/chess.js">chess.js</a> for the client.</p>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
