React do device height (mostly landscape mode)

--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
             <a href="#" class="list-group-item">Ke2 <span class="badge">Draw</span></a>
             <a href="#" class="list-group-item">Ke2 <span class="badge">Draw</span></a>
             <a href="#" class="list-group-item">Ke2 <span class="badge">Draw</span></a>
+            <a href="#" class="list-group-item">Ke2 <span class="badge">Draw</span></a>
+            <a href="#" class="list-group-item">Ke2 <span class="badge">Draw</span></a>
+            <a href="#" class="list-group-item">Ke2 <span class="badge">Draw</span></a>
+            <a href="#" class="list-group-item">Ke2 <span class="badge">Draw</span></a>
+            <a href="#" class="list-group-item">Ke2 <span class="badge">Draw</span></a>
+            <a href="#" class="list-group-item">Ke2 <span class="badge">Draw</span></a>
+            <a href="#" class="list-group-item">Ke2 <span class="badge">Draw</span></a>
+            <a href="#" class="list-group-item">Ke2 <span class="badge">Draw</span></a>
+            <a href="#" class="list-group-item">Ke2 <span class="badge">Draw</span></a>
           </div>
 
           <div id="loss" class="list-group black-win">
